--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ravimeranjan",
+  "homepage": "https://learnerthevictor.github.io/ravimeranjan/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
