--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ravimeranjan",
-  "homepage": "https://learnerthevictor.github.io/ravimeranjan/",
+  "homepage": "https://learnerthevictor.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,8 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
